feat: add functional

--- a/src/blocks/register/__login-link/register__login-link.css
+++ b/src/blocks/register/__login-link/register__login-link.css
@@ -1,4 +1,9 @@
 .register__login-link {
   text-decoration: none;
   color: #fff;
+  transition: opacity, 1s;
+}
+
+.register__login-link:hover {
+  opacity: 0.6;
 }
